Fix alignment of all service and info link
On service priority pages the all service and info link was pushed over
20px. This brings the link back in line with the other links on the
page.

--- a/app/assets/stylesheets/frontend/views/_organisations.scss
+++ b/app/assets/stylesheets/frontend/views/_organisations.scss
@@ -277,6 +277,7 @@
         }
         .see-all {
           padding-top: $gutter-one-third;
+          margin-left: 0;
         }
       }
     }
